css/style.css
/* ... */
@media (max-width: 22.5em) {
  .main__item-inner {
    width: 9.5625rem;
    height: 13.5625rem;
  }
}
@media (max-width: 20.625em) {
  .main__item-inner {
    width: 9.375rem;
    height: 13.5625rem;
  }
}
.main__bacground {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 103%;
  height: 102%;
  transform: translate(-50%, -50%);
  background: linear-gradient(#50f4ff, #ffdc26);
  border-radius: 14px;
}
.main__slotmashine {
  position: absolute;
  top: 2.5rem;
  left: 0.4375rem;
}
.main__seven {
  position: absolute;
  top: 3.25rem;
  left: 2.25rem;
}
.main__watermelon {
  position: absolute;
  bottom: 2.1875rem;
  left: 0rem;
}
.main__cherry {
  position: absolute;
  bottom: 2.1875rem;
  right: 0.5rem;
}
.main__sky {
  position: absolute;
  top: 2.9375rem;
  left: 0.75rem;
}
.main__roulet {
  position: absolute;
  bottom: 2.9375rem;
  left: 0.4375rem;
}
.main__slotm {
  position: absolute;
  bottom: 2.9375rem;
  right: 0.4375rem;
}
.main__bonus-image {
  position: absolute;
  top: 3.125rem;
  left: 1.375rem;
}

.slotmasine {
  transition: all 0.3s ease 0s;
}

.seven {
  transition: all 0.3s ease 0s;
}

.watermelon {
  transition: all 0.3s ease 0s;
}

.cherry {
  transition: all 0.3s ease 0s;
}

.sky {
  transition: all 0.3s ease 0s;
}

.roulet {
  transition: all 0.3s ease 0s;
}

.slotm {
  transition: all 0.3s ease 0s;
}

.bonus {
  transition: all 0.3s ease 0s;
}
.bonus__title {
  margin-top: 1.875rem;
  text-align: center;
}
.bonus__text-game {
  font-weight: 900;
  font-size: 48px;
  line-height: 56px;
  -webkit-text-stroke: 1.7px #fff;
  text-transform: uppercase;
  background-color: #2aa5a0;
  background-image: linear-gradient(90deg, #00fff0, #0092a6);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.bonus__inner {
  height: calc(100vh - 350px);
}
.bonus__wrapper {
  height: 100%;
}
.bonus__box {
  height: calc(100vh - 350px);
  padding-top: 20px;
}
.bonus__cont {
  display: flex;
  gap: 8px;
  width: 95vw;
  height: 75%;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  padding: 8px;
  transform: rotate(90deg);
}
@media (max-height: 50.625em) {
  .bonus__cont {
    height: 85%;
  }
}
@media (max-height: 45em) {
  .bonus__cont {
    height: 95%;
  }
}
@media (max-width: 23.4375em) {
  .bonus__cont {
    height: 90%;
  }
}
@media (max-height: 43.75em) {
  .bonus__cont {
    width: 87vw;
  }
}
@media (max-height: 40.625em) {
  .bonus__cont {
    width: 75vw;
  }
}
@media (max-height: 37.5em) {
  .bonus__cont {
    width: 50vw;
    height: 100%;
  }
}
.bonus__column {
  flex: 0 1 33.333%;
  background: linear-gradient(0deg, rgba(255, 255, 255, 0) -1.23%, rgba(255, 255, 255, 0.46875) 52.47%, rgba(255, 255, 255, 0) 99.86%);
}
.bonus__column .slotMachineContainer {
  padding-top: calc(17vh - 18px);
}
.bonus__item {
  height: calc(14vh - 1px);
  position: relative;
  top: -30px;
  left: 30px;
  transform: rotate(-90deg);
}
@media (max-height: 43.75em) {
  .bonus__item {
    top: -35px;
    left: 20px;
  }
  .bonus__item img {
    max-width: 55%;
  }
}
@media (max-width: 23.4375em) {
  .bonus__item {
    top: -35px;
    left: 20px;
  }
  .bonus__item img {
    max-width: 55%;
  }
}
@media (max-height: 40.625em) {
  .bonus__item {
    top: -35px;
    left: 25px;
    height: calc(13vh - 1px);
  }
  .bonus__item img {
    max-width: 45%;
  }
}
@media (max-height: 36.25em) {
  .bonus__item {
    left: 15px;
    height: calc(10vh - 1px);
  }
}
.bonus__footer {
  text-align: center;
}
.bonus__button {
  background: linear-gradient(180deg, #ff5c00 0%, #a03a00 100%);
  border: 1px solid #ffffff;
  box-sizing: border-box;
  box-shadow: inset 0px 4px 4px rgba(255, 255, 255, 0.74);
  border-radius: 8px;
  font-weight: 500;
  font-size: 1.5rem;
  line-height: 1.75rem;
  color: #ffffff;
  padding: 1.125rem 3.6875rem 1.0625rem;
}
@media (max-height: 43.75em) {
  .bonus__button {
    padding: 0.875rem 2.1875rem 0.8125rem;
  }
}
.bonus__button._hide {
  pointer-events: none;
}

.picture {
  max-width: 18.5625rem;
  margin: 0 auto;
}
.picture__item {
  position: relative;
  width: 18.5625rem;
  height: 29.375rem;
  margin: 2.5rem auto 3.125rem;
}
@media (max-height: 43.75em) {
  .picture__item {
    margin: 1.25rem auto 1.875rem;
  }
}
.picture__item._lock {
  pointer-events: none;
}
.picture__image {
  position: relative;
  background: radial-gradient(48.15% 45.02% at 50% 50%, #ffffff 0%, #dddddd 100%);
  z-index: 2;
  width: 100%;
  height: 100%;
  border-radius: 13px;
}
.picture__box-image {
  position: absolute;
  top: 6.625rem;
  left: 1.3125rem;
}
.picture__seven-image {
  position: absolute;
  top: 6.5rem;
  left: 3.3125rem;
}
.picture__watermelon-image {
  position: absolute;
  bottom: 3.4375rem;
  left: -1.25rem;
}
.picture__cherry-image {
  position: absolute;
  bottom: 3.4375rem;
  right: -1.875rem;
}
.picture__sky-image {
  position: absolute;
  top: 6.8125rem;
  left: 2.0625rem;
}
.picture__roulet-image {
  position: absolute;
  bottom: 8.125rem;
  left: 1.875rem;
  z-index: 2;
}
.picture__slot-image {
  position: absolute;
  bottom: 8.125rem;
  right: 0rem;
  z-index: 1;
}
.picture__bacground {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 103%;
  height: 102%;
  transform: translate(-50%, -50%);
  background: linear-gradient(#50f4ff, #ffdc26);
  border-radius: 14px;
  z-index: 1;
}
.picture__controls {
  display: flex;
  justify-content: center;
}
.picture__button {
  width: 54px;
  height: 54px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 900;
  line-height: 1.1875rem;
  color: #ffffff;
  border: 1px solid #ffffff;
  margin: 0 0.625rem;
}
.picture__button._lock {
  pointer-events: none;
  opacity: 0.2;
}
.picture__button._lock-all {
  pointer-events: none;
}

.picture-one__button_red {
  background: linear-gradient(180deg, #64040c 0%, #fb1927 100%);
}
.picture-one__button_yellow {
  background: linear-gradient(180deg, #ffbb52 0%, #c68021 100%);
}
/* ... */

